# Forge-Compiler

./: .gitignore  CLAUDE.md  MASTER_PLAN.md  README.md
forge/: Cargo.toml
forge/.github/workflows/: ci.yml
forge/crates/forge_cli/: Cargo.toml
forge/crates/forge_cli/src/: main.rs
forge/crates/forge_cli/tests/: lit.rs  perf.rs  preprocess_cli.rs  system_headers.rs
forge/crates/forge_diagnostics/: Cargo.toml
forge/crates/forge_diagnostics/src/: expansion.rs  lib.rs  source_map.rs
forge/crates/forge_diagnostics/src/tests/: builder.rs  mod.rs  rendering.rs  source_map.rs
forge/crates/forge_driver/: Cargo.toml
forge/crates/forge_driver/src/: lib.rs
forge/crates/forge_driver/src/tests/: driver_pipeline.rs  mod.rs
forge/crates/forge_driver/tests/: multifile_regression.rs
forge/crates/forge_lexer/: Cargo.toml
forge/crates/forge_lexer/examples/: perf.rs
forge/crates/forge_lexer/src/: lexer.rs  lib.rs  literal.rs  numeric.rs  token.rs  validation.rs
forge/crates/forge_lexer/src/tests/: comments.rs  edge_cases.rs  floats.rs  helpers.rs  integers.rs  keywords.rs  mod.rs  punctuators.rs  (+2 more)
forge/crates/forge_parser/: Cargo.toml
forge/crates/forge_parser/src/: ast.rs  ast_ops.rs  decl.rs  expr.rs  lib.rs  node_id.rs  parser.rs  printer.rs  stmt.rs
forge/crates/forge_preprocess/: Cargo.toml
forge/crates/forge_preprocess/src/: cond_expr.rs  cursor.rs  expand.rs  lib.rs  pp_token.rs  preprocessor.rs  state.rs  system_includes.rs
forge/crates/forge_preprocess/tests/: multifile_diag.rs  stress.rs
forge/crates/forge_sema/: Cargo.toml
forge/crates/forge_sema/src/: address_taken.rs  const_eval.rs  context.rs  declare.rs  expr.rs  layout.rs  lib.rs  resolve.rs  scope.rs  stmt.rs  tu.rs  types.rs
forge/docs/: diagnostics.md
forge/tests/lit/lexer/: errors.c  floats.c  integers.c  keywords.c  punctuators.c  strings.c
forge/tests/lit/parser/: mini_program.c
forge/tests/lit/preprocess/: cli_define.c  complex.c  conditionals.c  function_macros.c  include.c  object_macros.c  paste.c  stringify.c
forge/tests/lit/sema/: headers_smoke.c  headers_smoke_extended.c  realworld.c
forge/tests/lit/smoke/: check_stub.c  version.c
(+104 files in other folders)
