[workspace]
resolver = "2"
members = [
    "crates/forge_cli",
    "crates/forge_driver",
    "crates/forge_diagnostics",
    "crates/forge_lexer",
    "crates/forge_preprocess",
    "crates/forge_parser",
    "crates/forge_sema",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Forge Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
ariadne = "0.4"
forge_driver = { path = "crates/forge_driver" }
forge_diagnostics = { path = "crates/forge_diagnostics" }
forge_lexer = { path = "crates/forge_lexer" }
forge_preprocess = { path = "crates/forge_preprocess" }
forge_parser = { path = "crates/forge_parser" }
forge_sema = { path = "crates/forge_sema" }
