[package]
name = "forge_sema"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
forge_lexer = { path = "../forge_lexer" }
forge_parser = { path = "../forge_parser" }
forge_diagnostics = { path = "../forge_diagnostics" }
rustc-hash = "2"
